# src/internal/http_api/controllers/pull_request_controller.go
@@ -5,7 +5,6 @@ import (
 	"log/slog"
 	"net/http"
 
-	"PrService/src/internal/application/services"
 	"PrService/src/internal/domain"
 	"PrService/src/internal/http_api/models"
 
@@ -15,11 +14,11 @@ import (
 
 type PullRequestController struct {
 	baseController
-	pullRequestService *services.PullRequestService
+	pullRequestService domain.PullRequestService
 }
 
 func NewPullRequestController(
-	pullRequestService *services.PullRequestService,
+	pullRequestService domain.PullRequestService,
 	validate *validator.Validate,
 	logger *slog.Logger,
 ) *PullRequestController {
@@ -36,18 +35,18 @@ func (c *PullRequestController) UseHandlers(r chi.Router) {
 }
 
 // create godoc
-// @Summary      Создать PR
-// @Description  Создать PR и автоматически назначить до 2 ревьюверов из команды автора
-// @Tags         PullRequests
-// @Accept       json
-// @Produce      json
-// @Param        request  body      models.CreatePullRequestRequest      true  "Create pull request body"
-// @Success      201      {object}  models.PullRequestEnvelopeResponse
-// @Failure      400      {object}  models.ErrorResponse  "invalid request body or validation failed"
-// @Failure      404      {object}  models.ErrorResponse  "author or team not found"
-// @Failure      409      {object}  models.ErrorResponse  "pull request already exists"
-// @Failure      500      {object}  models.ErrorResponse  "internal server error"
-// @Router       /pullRequest/create [post]
+//
+//	@Summary	Создать PR и автоматически назначить до 2 ревьюверов из команды автора
+//	@Tags		PullRequests
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		models.CreatePullRequestRequest		true	"Create pull request body"
+//	@Success	201		{object}	models.PullRequestEnvelopeResponse	"PR создан"
+//	@Failure	400		{object}	models.ErrorResponse				"Неверный запрос"
+//	@Failure	404		{object}	models.ErrorResponse				"Автор/команда не найдены"
+//	@Failure	409		{object}	models.ErrorResponse				"PR уже существует"
+//	@Failure	500		{object}	models.ErrorResponse				"Ошибка сервера"
+//	@Router		/pullRequest/create [post]
 func (c *PullRequestController) create(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -108,17 +107,17 @@ func (c *PullRequestController) create(w http.ResponseWriter, r *http.Request) {
 }
 
 // merge godoc
-// @Summary      Пометить PR как MERGED
-// @Description  Пометить PR как MERGED (идемпотентная операция)
-// @Tags         PullRequests
-// @Accept       json
-// @Produce      json
-// @Param        request  body      models.MergePullRequestRequest      true  "Merge pull request body"
-// @Success      200      {object}  models.PullRequestEnvelopeResponse
-// @Failure      400      {object}  models.ErrorResponse  "invalid request body or validation failed"
-// @Failure      404      {object}  models.ErrorResponse  "pull request not found"
-// @Failure      500      {object}  models.ErrorResponse  "internal server error"
-// @Router       /pullRequest/merge [post]
+//
+//	@Summary	Пометить PR как MERGED (идемпотентная операция)
+//	@Tags		PullRequests
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		models.MergePullRequestRequest		true	"Merge pull request body"
+//	@Success	200		{object}	models.PullRequestEnvelopeResponse	"PR в состоянии MERGED"
+//	@Failure	400		{object}	models.ErrorResponse				"Неверный запрос"
+//	@Failure	404		{object}	models.ErrorResponse				"PR не найден"
+//	@Failure	500		{object}	models.ErrorResponse				"Ошибка сервера"
+//	@Router		/pullRequest/merge [post]
 func (c *PullRequestController) merge(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -155,18 +154,18 @@ func (c *PullRequestController) merge(w http.ResponseWriter, r *http.Request) {
 }
 
 // reassign godoc
-// @Summary      Переназначить ревьювера PR
-// @Description  Переназначить конкретного ревьювера на другого из его команды
-// @Tags         PullRequests
-// @Accept       json
-// @Produce      json
-// @Param        request  body      models.ReassignPullRequestRequest   true  "Reassign pull request reviewer body"
-// @Success      200      {object}  models.ReassignPullRequestResponse
-// @Failure      400      {object}  models.ErrorResponse  "invalid request body or validation failed"
-// @Failure      404      {object}  models.ErrorResponse  "PR or user not found"
-// @Failure      409      {object}  models.ErrorResponse  "domain rule violation"
-// @Failure      500      {object}  models.ErrorResponse  "internal server error"
-// @Router       /pullRequest/reassign [post]
+//
+//	@Summary	Переназначить конкретного ревьювера на другого из его команды
+//	@Tags		PullRequests
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		models.ReassignPullRequestRequest	true	"Reassign pull request reviewer body"
+//	@Success	200		{object}	models.ReassignPullRequestResponse	"Переназначение выполнено"
+//	@Failure	400		{object}	models.ErrorResponse				"Неверный запрос"
+//	@Failure	404		{object}	models.ErrorResponse				"PR или пользователь не найден"
+//	@Failure	409		{object}	models.ErrorResponse				"Нарушение доменных правил переназначения"
+//	@Failure	500		{object}	models.ErrorResponse				"Ошибка сервера"
+//	@Router		/pullRequest/reassign [post]
 func (c *PullRequestController) reassign(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
